fix: add init container to chmod and chown volumes

--- a/kubernetes/aaf/charts/aaf-gui/templates/deployment.yaml
+++ b/kubernetes/aaf/charts/aaf-gui/templates/deployment.yaml
@@ -73,6 +73,24 @@ spec:
 #            value: ""
 #         - name: CASSANDRA_PORT
 #            value: ""
+      - command:
+          - /bin/sh
+          - -c
+          - |
+            chmod -R 775 /opt/app/aaf/status
+            chown -R 1000:1000 /opt/app/aaf/status
+            chmod -R 775 /opt/app/osaaf
+            chown -R 1000:1000 /opt/app/osaaf
+        securityContext:
+          privileged: true
+        image: busybox:1.28
+        imagePullPolicy: {{ .Values.global.pullPolicy | default .Values.pullPolicy }}
+        name: init-sysctl
+        volumeMounts:
+          - mountPath: /opt/app/osaaf
+            name: aaf-config-vol
+          - mountPath: /opt/app/aaf/status
+            name: aaf-status-vol
       containers:
       - name: {{ include "common.name" . }}
         command: ["/bin/bash","-c","cd /opt/app/aaf && /bin/bash bin/pod_wait.sh aaf-gui aaf-locate && exec bin/gui"]  
