remove hardcoded MariaDB password
This aligns with other changes on OOM.
You can either supply a specific password or
 have it generated for you based on a master password

Issue-ID: CLAMP-796, OJSI-188

Change-Id: If1b80fc47cf1033e094f8a106746d1e8c556c08b
Signed-off-by: JulienBe <jb379x@att.com>

--- a/kubernetes/clamp/charts/mariadb/templates/deployment.yaml
+++ b/kubernetes/clamp/charts/mariadb/templates/deployment.yaml
@@ -52,11 +52,10 @@ spec:
             initialDelaySeconds: {{ .Values.readiness.initialDelaySeconds }}
             periodSeconds: {{ .Values.readiness.periodSeconds }}
           env:
-            - name: MYSQL_ROOT_PASSWORD
-              valueFrom:
-                secretKeyRef:
-                  name: {{ template "common.fullname" . }}
-                  key: db-root-password
+            - name: MYSQL_USER
+              {{- include "common.secret.envFromSecretFast" (dict "global" . "uid" "clamp-db-user-secret" "key" "login") | indent 14 }}
+            - name: MYSQL_PASSWORD
+              {{- include "common.secret.envFromSecretFast" (dict "global" . "uid" "clamp-db-user-secret" "key" "password") | indent 14 }}
           volumeMounts:
           - mountPath: /docker-entrypoint-initdb.d/bootstrap-database.sh
             name: docker-entrypoint-initdb
