--- a/kubernetes/clamp/charts/mariadb/values.yaml
+++ b/kubernetes/clamp/charts/mariadb/values.yaml
@@ -31,7 +31,22 @@ flavor: small
 # Application configuration defaults.
 #################################################################
 config:
-  mysqlPassword: strong_pitchou
+  clampDrDb:
+    userName: datarouter
+    # uncomment this to set a specific password for the database
+#    userPassword: strong_pitchou
+#    userCredentialsExternalSecret: some secret
+
+#################################################################
+# Secrets metaconfig
+#################################################################
+secrets:
+  - uid: clamp-db-user-secret
+    name: '{{ include "common.release" . }}-clamp-db-user-secret'
+    type: basicAuth
+    externalSecret: '{{ tpl (default "" .Values.config.clampDrDb.userCredentialsExternalSecret) . }}'
+    login: '{{ .Values.config.clampDrDb.userName }}'
+    password: '{{ .Values.config.clampDrDb.userPassword }}'
 
 # default number of instances
 replicaCount: 1
